# Support-and-Resistance

./: CMakeLists.txt  README.md
Fibonacci/: FibonacciLevels.cpp
Horizontal/: SupportResistanceLevels.cpp
Psychological/: PsychologicalLevels.cpp
Trendlines/: Trendlines.cpp
cmake/: srlevelsConfig.cmake.in
examples/data/: sample_1h.csv
include/sr/: ohlcv.hpp  sr_finder.hpp  utils.hpp  version.hpp
pkgconfig/: srlevels.pc.in
src/: cli.cpp  fibonacci.cpp  horizontal.cpp  ohlcv.cpp  psychological.cpp  trendlines.cpp
tests/: tests.cpp
